--- a/css/main.css
+++ b/css/main.css
@@ -327,17 +327,22 @@ footer .text a {
 footer .text span {
 	color: red;
 }
+footer .text :last-child {
+	margin-top: 15px;
+}
 footer .text a:hover {
 	text-decoration: none;
 }
 
 @media screen and (max-width: 812px) {
+	header nav ul li a {
+		margin: 0 5px;
+		padding: 0;
+		font-size: 10px;
+	}
 	.content .left, .content .right {
 		float: none;
 		width: 100%;
-	}
-	.content .flex-container {
-		flex-wrap: wrap;
 	}
 	.content .banner .information h1 {
 		font-size: 50px;
@@ -348,11 +353,43 @@ footer .text a:hover {
 	.content .offer_2 > div {
 		width: 100%;
 	}
+	.offer_3 img {
+		width: 100%;
+	}
 	.image_set .image_left, .image_set .image_right {
 		float: none;
 	}
-	.advantages {
-		flex-wrap: wrap;
+	.advantages > div {
+		margin: 0 3px;
+	}
+	.advantages > div, .advantages > div:nth-child(2), 
+	.advantages > div:nth-child(3), .advantages > div:nth-child(4) {
+		background-size: 25%;
+	}
+	.advantages div span {
+		font-size: 10px;
+		padding: 20px 0 0 28px;
+	}
+	footer .info {
+		height: 120px;
+	} 
+	footer .info h4 {
+		font-size: 14px;
+	}
+	footer .info p {
+		font-size: 13px;
+	}
+	footer .info > div:nth-child(1) > p {
+		font-size: 14px;
+	}
+	footer .info > div:nth-child(2) {
+		padding: 40px 10px;
+	}
+	footer .info > div:nth-child(2) > img {
+		margin-top: 10px;
+	}
+	footer .info > div:nth-child(3) {
+		padding-top: 35px;
 	}
 }
 
